data/derived/fa15/progs/unify/prog0366.ml.out
Characters 104-106:
  | Sine e'	      -> sin(eval e' x y)
                              ^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
